--- a/CoreDataBG/Main.storyboard
+++ b/CoreDataBG/Main.storyboard
@@ -18,42 +18,28 @@
                         <rect key="frame" x="0.0" y="0.0" width="320" height="480"/>
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
                         <subviews>
-                            <tableView clipsSubviews="YES" contentMode="scaleToFill" fixedFrame="YES" alwaysBounceVertical="YES" dataMode="prototypes" style="plain" separatorStyle="default" rowHeight="102" sectionHeaderHeight="28" sectionFooterHeight="28" translatesAutoresizingMaskIntoConstraints="NO" id="eni-Mx-WNX">
+                            <tableView clipsSubviews="YES" contentMode="scaleToFill" fixedFrame="YES" alwaysBounceVertical="YES" dataMode="prototypes" style="plain" separatorStyle="default" rowHeight="57" sectionHeaderHeight="28" sectionFooterHeight="28" translatesAutoresizingMaskIntoConstraints="NO" id="eni-Mx-WNX">
                                 <rect key="frame" x="0.0" y="0.0" width="320" height="480"/>
                                 <color key="backgroundColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
                                 <color key="tintColor" red="0.067206212289999998" green="0.87729562689999996" blue="0.91588268979999998" alpha="1" colorSpace="calibratedRGB"/>
                                 <prototypes>
-                                    <tableViewCell clipsSubviews="YES" contentMode="scaleToFill" selectionStyle="blue" hidesAccessoryWhenEditing="NO" indentationLevel="1" indentationWidth="0.0" reuseIdentifier="personCell" rowHeight="102" id="n6G-Ju-lZW" customClass="PersonCell" customModule="CoreDataBG" customModuleProvider="target">
-                                        <rect key="frame" x="0.0" y="92" width="320" height="102"/>
+                                    <tableViewCell clipsSubviews="YES" contentMode="scaleToFill" selectionStyle="blue" hidesAccessoryWhenEditing="NO" indentationLevel="1" indentationWidth="0.0" reuseIdentifier="personCell" rowHeight="57" id="n6G-Ju-lZW" customClass="PersonCell" customModule="CoreDataBG" customModuleProvider="target">
+                                        <rect key="frame" x="0.0" y="92" width="320" height="57"/>
                                         <autoresizingMask key="autoresizingMask"/>
                                         <tableViewCellContentView key="contentView" opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center" tableViewCell="n6G-Ju-lZW" id="9x5-ek-tcd">
-                                            <rect key="frame" x="0.0" y="0.0" width="320" height="101.5"/>
+                                            <rect key="frame" x="0.0" y="0.0" width="320" height="56.5"/>
                                             <autoresizingMask key="autoresizingMask"/>
                                             <subviews>
-                                                <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" fixedFrame="YES" text="Member Name" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="ZfV-Mj-UMt">
-                                                    <rect key="frame" x="8" y="17" width="155" height="34"/>
+                                                <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" fixedFrame="YES" text="Label" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="KfR-vt-Fp6">
+                                                    <rect key="frame" x="33" y="8" width="147" height="40.5"/>
                                                     <fontDescription key="fontDescription" type="system" pointSize="20"/>
-                                                    <color key="textColor" red="1" green="0.52277237450000003" blue="0.39621548480000002" alpha="1" colorSpace="calibratedRGB"/>
-                                                    <nil key="highlightedColor"/>
-                                                </label>
-                                                <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" fixedFrame="YES" text="Age" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="CSn-SW-t9v">
-                                                    <rect key="frame" x="8" y="59" width="62" height="29"/>
-                                                    <fontDescription key="fontDescription" type="system" pointSize="17"/>
-                                                    <color key="textColor" red="1" green="0.52277237450000003" blue="0.39621548480000002" alpha="1" colorSpace="calibratedRGB"/>
-                                                    <nil key="highlightedColor"/>
-                                                </label>
-                                                <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" fixedFrame="YES" text="City" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="nM5-20-z1j">
-                                                    <rect key="frame" x="54" y="63" width="109" height="25"/>
-                                                    <fontDescription key="fontDescription" type="system" pointSize="16"/>
-                                                    <color key="textColor" red="0.028445675529999999" green="0.61414817720000003" blue="1" alpha="1" colorSpace="calibratedRGB"/>
+                                                    <color key="textColor" red="1" green="0.31045604760000001" blue="0.36800636440000001" alpha="1" colorSpace="calibratedRGB"/>
                                                     <nil key="highlightedColor"/>
                                                 </label>
                                             </subviews>
                                         </tableViewCellContentView>
                                         <connections>
-                                            <outlet property="City" destination="nM5-20-z1j" id="zoe-gc-3mc"/>
-                                            <outlet property="ageLabel" destination="CSn-SW-t9v" id="Mxp-pV-77u"/>
-                                            <outlet property="nameLabel" destination="ZfV-Mj-UMt" id="IMs-sD-Q1v"/>
+                                            <outlet property="nameLabel" destination="KfR-vt-Fp6" id="FBh-6i-6Th"/>
                                         </connections>
                                     </tableViewCell>
                                 </prototypes>
@@ -73,7 +59,7 @@
                             </barButtonItem>
                             <barButtonItem image="delete_nav_icon" id="d2M-NQ-VmG">
                                 <connections>
-                                    <action selector="deleteAll:" destination="EMW-ku-IWy" id="3bk-Xh-Uso"/>
+                                    <action selector="deleteAll:" destination="EMW-ku-IWy" id="Oi2-pz-0dH"/>
                                 </connections>
                             </barButtonItem>
                         </rightBarButtonItems>
@@ -86,6 +72,50 @@
                 <placeholder placeholderIdentifier="IBFirstResponder" id="lkk-o5-LvG" userLabel="First Responder" sceneMemberID="firstResponder"/>
             </objects>
             <point key="canvasLocation" x="-276" y="-480"/>
+        </scene>
+        <!--Profile View Controller-->
+        <scene sceneID="Oos-72-e1C">
+            <objects>
+                <viewController storyboardIdentifier="profileVC" id="GOH-j6-BVV" customClass="ProfileViewController" customModule="CoreDataBG" customModuleProvider="target" sceneMemberID="viewController">
+                    <layoutGuides>
+                        <viewControllerLayoutGuide type="top" id="Iqj-26-tCC"/>
+                        <viewControllerLayoutGuide type="bottom" id="5qJ-h5-vPH"/>
+                    </layoutGuides>
+                    <view key="view" contentMode="scaleToFill" id="0dm-gY-Id4">
+                        <rect key="frame" x="0.0" y="0.0" width="320" height="480"/>
+                        <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
+                        <subviews>
+                            <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" fixedFrame="YES" text="Name" textAlignment="center" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="aJW-lo-IEj">
+                                <rect key="frame" x="91" y="113" width="138" height="45"/>
+                                <fontDescription key="fontDescription" type="system" pointSize="20"/>
+                                <color key="textColor" red="1" green="0.31045604760000001" blue="0.36800636440000001" alpha="1" colorSpace="calibratedRGB"/>
+                                <nil key="highlightedColor"/>
+                            </label>
+                            <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" fixedFrame="YES" text="Age" textAlignment="center" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="enH-s5-vuV">
+                                <rect key="frame" x="128" y="148" width="65" height="37"/>
+                                <fontDescription key="fontDescription" type="system" pointSize="17"/>
+                                <color key="textColor" cocoaTouchSystemColor="darkTextColor"/>
+                                <nil key="highlightedColor"/>
+                            </label>
+                            <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" fixedFrame="YES" text="City" textAlignment="center" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="DeS-lH-mM6">
+                                <rect key="frame" x="97" y="180" width="126" height="47"/>
+                                <fontDescription key="fontDescription" type="system" pointSize="20"/>
+                                <color key="textColor" red="0.028445675529999999" green="0.61414817720000003" blue="1" alpha="1" colorSpace="calibratedRGB"/>
+                                <nil key="highlightedColor"/>
+                            </label>
+                        </subviews>
+                        <color key="backgroundColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
+                    </view>
+                    <simulatedScreenMetrics key="simulatedDestinationMetrics"/>
+                    <connections>
+                        <outlet property="ageLabel" destination="enH-s5-vuV" id="gTd-py-mK8"/>
+                        <outlet property="cityLabel" destination="DeS-lH-mM6" id="4cB-xG-jxn"/>
+                        <outlet property="nameLabel" destination="aJW-lo-IEj" id="Spb-Vo-RIZ"/>
+                    </connections>
+                </viewController>
+                <placeholder placeholderIdentifier="IBFirstResponder" id="v3v-lS-YYC" userLabel="First Responder" sceneMemberID="firstResponder"/>
+            </objects>
+            <point key="canvasLocation" x="134" y="-480"/>
         </scene>
         <!--Navigation Controller-->
         <scene sceneID="Lak-dI-XZy">
